--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/main.css" />
+    <link rel="stylesheet" href="./assets/secondary.css" />
   </head>
 
   <body>
@@ -24,7 +25,7 @@
       <nav class="main-nav">
         <ul class="main-nav__items">
           <li class="main-nav__item">
-            <a href="">Packages</a>
+            <a href="packages/index.html">Packages</a>
           </li>
           <li class="main-nav__item">
             <a href="">Customers</a>
@@ -88,6 +89,35 @@
           </article>
         </div>
       </section>
+      <section id="key-features">
+        <h1 class="section-title">Many Good Reasons to Stick Around</h1>
+        <ul class="key-feature__list">
+          <li class="key-feature">
+            <div class="key-feature__image"></div>
+            <p class="key-feature__description">3,857,000 Trusting Customers</p>
+          </li>
+          <li class="key-feature">
+            <div class="key-feature__image"></div>
+            <p class="key-feature__description">99.99% Uptime Guarantee</p>
+          </li>
+          <li class="key-feature">
+            <div class="key-feature__image"></div>
+            <p class="key-feature__description">Lighting Fast CDN</p>
+          </li>
+        </ul>
+      </section>
     </main>
+    <footer class="main-footer">
+      <nav>
+        <ul class="main-footer__links">
+          <li class="main-footer__link">
+            <a href="#">Support</a>
+          </li>
+          <li class="main-footer__link">
+            <a href="#">Terms of Use</a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
