--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <header class="main-header">
       <div>
-        <a href="index.html" class="main-header__brand">vHost</a>
+        <a href="index.html" class="main-header__brand"
+          ><img src="/One/assets/logo.png" alt="vHost"
+        /></a>
       </div>
       <nav class="main-nav">
         <ul class="main-nav__items">
