--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="main-header">
       <div>
         <a href="index.html" class="main-header__brand"
-          ><img src="/One/assets/logo.png" alt="vHost"
+          ><img src="./assets/logo.png" alt="vHost"
         /></a>
       </div>
       <nav class="main-nav">
@@ -30,7 +30,7 @@
             <a href="packages/index.html">Packages</a>
           </li>
           <li class="main-nav__item">
-            <a href="">Customers</a>
+            <a href="customers/index.html">Customers</a>
           </li>
           <li class="main-nav__item main-nav__item--cta">
             <a href="">Start Hosting</a>
