--- a/customers/index.html
+++ b/customers/index.html
@@ -10,11 +10,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../assets/secondary.css" />
-    <link rel="stylesheet" href="customer.css" />
+    <link rel="stylesheet" href="customers.css" />
   </head>
 
   <body>
-    <div class="background"></div>
     <header class="main-header">
       <div>
         <a href="../index.html" class="main-header__brand"
@@ -38,45 +37,43 @@
 
     <main>
       <div>
-        <!-- Customer 1 -->
         <div class="testimonial" id="customer-1">
           <div class="testimonial__image-container">
             <img
               src="../assets/customer-1.jpg"
               alt="Mike Statham - Customer"
-              class="testimonial__"
+              class="testimonial__image"
             />
           </div>
           <div class="testimonial__info">
             <h1 class="testimonial__name">Mike Statham</h1>
             <h2 class="testimonial__subtitle">
-              Founder of <a href="tech-analysis.com">tech-analysis.com</a>
+              Founder of
+              <a href="tech-analysis.com">tech-analysis.com</a>
             </h2>
             <p class="testimonial__text">
-              vHost helped me realize myproject with a high quality
+              uHost helped me realize my project with a highly constrained
+              budget in like no time.
             </p>
           </div>
         </div>
-        <!-- Customer 2 -->
-        <div class="testimonial" id="customer-1">
-          <div class="testimonial__image-container">
-            <img
-              src="../assets/customer-2.jpg"
-              alt="Mike Statham - Customer"
-              class="testimonial__"
-            />
-          </div>
+        <div class="testimonial" id="customer-2">
           <div class="testimonial__info">
             <h1 class="testimonial__name">John Mellow</h1>
             <h2 class="testimonial__subtitle">
-              Hosts his private videos on vHost.
+              Hosts his private videos on uHost.
             </h2>
             <p class="testimonial__text">
-              I worked as a blogger and always looked for an...
+              I worked as a blogger and always looked for an integrated hosting
+              and file storage solution. I found it in uHost!
             </p>
           </div>
           <div class="testimonial__image-container">
-            <img src="" alt="John Mellow - Customer" class="testimonial__" />
+            <img
+              src="../assets/customer-2.jpg"
+              alt="John Mellow - Customer"
+              class="testimonial__image"
+            />
           </div>
         </div>
       </div>
