--- a/packages/index.html
+++ b/packages/index.html
@@ -29,6 +29,9 @@
           <li class="main-nav__item">
             <a href="../customers/index.html">Customers</a>
           </li>
+          <li class="main-nav__item">
+            <a href="customers/index.html">Contact us</a>
+          </li>
           <li class="main-nav__item main-nav__item--cta">
             <a href="">Start Hosting</a>
           </li>
