--- a/customers/index.html
+++ b/customers/index.html
@@ -29,7 +29,7 @@
             <a href="index.html">Customers</a>
           </li>
           <li class="main-nav__item">
-            <a href="customers/index.html">Contact us</a>
+            <a href="contact us/index.html">Contact us</a>
           </li>
           <li class="main-nav__item main-nav__item--cta">
             <a href="../start-hosting/index.html">Start Hosting</a>
