--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="customers/index.html">Customers</a>
           </li>
           <li class="main-nav__item">
-            <a href="customers/index.html">Contact us</a>
+            <a href="contact us/index.html">Contact us</a>
           </li>
           <li class="main-nav__item main-nav__item--cta">
             <a href="">Start Hosting</a>
